# Jarvis-clip-that

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
out old try/: output.h264
src/: com.rs  error.rs  image.rs  main.rs  screenshot.rs  screenshot_directx.rs  screenshot_duplicationapi.rs  screenshot_winapi.rs  traits.rs  types.rs  video.rs  wrappers.rs
src/Clip Editor/: audio_playback.rs  clip_editor.rs  decoders.rs  edit.rs  editor.rs  egui.rs  hw_decoding.rs  main.rs  media.rs  media_decoder.rs  media_playback.rs  stream.rs  stream_handle.rs  stream_scheduler.rs  textures.rs
src/Clip Editorold/: clip_editor.rs  decoders.rs  egui.rs  main.rs  media_decoder.rs  media_playback.rs  stream_handle.rs
src/Jarvis Clip That/: config.rs  error.rs  main.rs  types.rs  wrappers.rs
src/Jarvis Clip That/recorders/: frame.rs  recorder.rs  traits.rs
src/Jarvis Clip That/recorders/audio/: audio_recorder.rs  mod.rs
src/Jarvis Clip That/recorders/audio/sources/: enums.rs  mod.rs  traits.rs
src/Jarvis Clip That/recorders/save/: key_listener.rs  mod.rs  saver.rs
src/Jarvis Clip That/recorders/video/: video_recorder.rs
src/Jarvis Clip That/recorders/video/sources/: enums.rs  traits.rs
src/Jarvis Clip That/ring_buffer/: packet_handlers.rs  ring_buffer.rs  traits.rs
src/__old/: error.rs  main.rs
src/__old/recorder/: creator.rs  mod.rs  parameters.rs
src/__old/recorder/clipper/: clip.rs  mod.rs  saver.rs
src/__old/recorder/clipper/wake_word/: mod.rs  model_loader.rs
src/__old/recorder/recorders/: d3d11.rs  frame.rs  mod.rs  test_window_capture.rs  wasapi.rs
src/__old/recorder/recorders/video/: mod.rs
src/__old/ring_buffer/: mod.rs
src/_old/: main.rs
src/_old/capturer/: error.rs  ring_buffer.rs
src/_old/capturer/capture/: mod.rs  recorder.rs
src/_old/capturer/clipping/: saver.rs
src/capturer/: _ring_buffer.rs  audio_capturer.rs  capturer.rs  capturer_old.rs  clipper.rs  error.rs  key_listener.rs  mod.rs  ring_buffer.rs  ring_buffer_old.rs  saver.rs  screenshot_duplicationapi.rs  video.rs
src/capturer/capture/: _audio_capturer.rs  _audio_per_process.rs  _video_capturer.rs  audio_capturer.rs  audio_per_process.rs  capturer.rs  main_audio_capturer.rs  main_video_capturer.rs  mod.rs  recorder.rs  video_capturer.rs
src/capturer/clipping/: key_listener.rs  saver.rs
src/egui/: decoders.rs  egui.rs  hw_decoding.rs  media.rs  media_playback.rs  window.rs
src/old/capturer/clipping/: key_listener.rs  mod.rs
src/recorder/: creator.rs  mod.rs  parameters.rs  traits.rs
src/recorder/clipper/: key_listener.rs  mod.rs  saver.rs  voice_listener.rs
src/recorder/recorders/: d3d11.rs  encoders.rs  frame.rs  mod.rs
src/recorder/recorders/audio/: default_audio_recorder.rs  mod.rs
src/recorder/recorders/video/: 2.rs  desktop_recorder.rs  mod.rs
src/recorders/: frame.rs  mod.rs  recorder.rs  traits.rs
src/recorders/audio/: audio_recorder.rs  desktop_recorder.rs  mod.rs
src/recorders/audio/sources/: enums.rs
src/recorders/save/: _saver.rs  key_listener.rs  mod.rs  saver.rs
src/recorders/video/: desktop_recorder.rs  mod.rs  video_recorder.rs
src/recorders/video/sources/: enums.rs  mod.rs  traits.rs
src/ring_buffer/: packet_handlers.rs  ring_buffer.rs  traits.rs
(+16 files in other folders)
