[package]
name = "Jarvis-clip-that"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1"

winapi = { version = "0.3.9", features = ["winuser", "wingdi", "winnt", "ntdef", "windef", "minwindef"] }
windows = { version = "0.61.1", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Graphics_Direct3D", "Win32_System", "Win32_System_Threading", "Win32_Graphics_Dxgi_Common", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_System_Memory", "Win32_System_Com", "Win32_Media", "Win32_Media_Audio", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Security", "Win32_System_Performance", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp"] }
windows-core = "0.61.0"

wasapi = "0.17.0"

ffmpeg-next = { version = "7.1.0", default-features = false, features = ["codec", "format", "software-scaling"] }

rdev = "0.5.3"

chrono = "0.4.41"

rodio = "0.20.1"